<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/service_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/auth_service_title"
            android:textColor="@color/color_title"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/auth_service_content"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/service_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_30"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/auth_service_content_1"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_30"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/auth_service_content_1"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_30"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/auth_service_content_2"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_30"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/auth_service_content_3"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/agreement_check"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:theme="@style/MyCheckBox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="同意"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《用户协议》"
                android:textColor="@color/mine_blue"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="和"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/privacy_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《隐私协议》"
                android:textColor="@color/mine_blue"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_cross_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/service_refuse"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/auth_service_refuse"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/service_agree"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/auth_service_agree"
                android:textColor="@color/mine_blue"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>