<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_white"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:src="@drawable/arr_l" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/title_morph"
                android:textColor="@color/color_content"
                android:textSize="@dimen/sp_16" />


        </FrameLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp_10">

            <ImageView
                android:id="@+id/first_pic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_140"
                android:scaleType="fitXY"
                android:src="@drawable/doc_to_text_01" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_corner_white"
            app:cardCornerRadius="@dimen/dp_10">

            <ImageView
                android:id="@+id/second_pic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_140"
                android:scaleType="fitXY"
                android:src="@drawable/doc_to_text_02" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginStart="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/sp_16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="识别结果"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/shape_corner_grey"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/doc_to_text_01"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/round_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/desc_3"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/round_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/desc_4"
            android:textColor="@color/color_content"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <include layout="@layout/layout_second_bottom" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>